--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -39,7 +39,6 @@ sc-network-common                 ={ version="0.10.0-dev", git='https://github.c
 sc-consensus-slots                ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
 grandpa                           ={ version="0.10.0-dev", package="sc-consensus-grandpa", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
 sc-consensus-grandpa-rpc          ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
-sc-statement-store                ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
 sp-transaction-storage-proof      ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
 sc-authority-discovery            ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
 sc-consensus-babe-rpc             ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
@@ -54,19 +53,15 @@ pallet-transaction-payment        ={ version="4.0.0-dev", git='https://github.co
 pallet-staking-extension          ={ version="0.0.7", path="../../pallets/staking" }
 pallet-asset-conversion-tx-payment={ version="4.0.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
 pallet-free-tx                    ={ version="0.0.7", path="../../pallets/free-tx" }
+pallet-relayer                    ={ version="0.0.7", path="../../pallets/relayer" }
 node-inspect                      ={ version="0.9.0-dev", optional=true, git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
 substrate-frame-cli               ={ version="4.0.0-dev", optional=true, git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
 sc-sysinfo                        ={ version="6.0.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
 substrate-state-trie-migration-rpc={ version="4.0.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
 sc-cli                            ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0", optional=true }
-kitchensink-runtime               ={ version="3.0.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
-node-rpc                          ={ version="3.0.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
-node-executor                     ={ version="3.0.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
 sc-network-sync                   ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
-sc-network-statement              ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
 sc-storage-monitor                ={ version="0.1.0", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
 pallet-asset-tx-payment           ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
-sp-statement-store                ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
 sc-offchain                       ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
 
 [build-dependencies]
@@ -79,12 +74,9 @@ try-runtime-cli             ={ version="0.10.0-dev", optional=true, git='https:/
 sc-cli                      ={ version="0.10.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0", optional=true }
 pallet-balances             ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
 
-sc-service-test={ version="2.0.0", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
-
 [dev-dependencies]
-sc-service-test={ version="2.0.0", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
-tempfile       ="3.1.0"
-sp-tracing     ={ version="10.0.0", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
+tempfile  ="3.1.0"
+sp-tracing={ version="10.0.0", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
 
 [dependencies.entropy-runtime]
 path   ='../../runtime'
@@ -225,9 +217,9 @@ cli=[
   "try-runtime-cli",
 ]
 runtime-benchmarks=[
-  "kitchensink-runtime/runtime-benchmarks",
+  "entropy-runtime/runtime-benchmarks",
   "frame-benchmarking-cli/runtime-benchmarks",
 ]
 # Enable features that allow the runtime to be tried and debugged. Name might be subject to change
 # in the near future.
-try-runtime=["kitchensink-runtime/try-runtime", "try-runtime-cli/try-runtime"]
+try-runtime=["entropy-runtime/try-runtime", "try-runtime-cli/try-runtime"]
