--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -10,7 +10,6 @@ edition    ='2021'
 
 [dependencies]
 async-trait    ="0.1.73"
-serde_json     ="1.0"
 entropy-shared ={ path="../shared", default-features=false }
 synedrion      ={ git="ssh://git@github.com/entropyxyz/synedrion.git", tag="v0.0.9" }
 serde          ={ version="1.0", features=["derive"], default-features=false }
@@ -27,6 +26,7 @@ snow           ="0.9.2"
 getrandom      ={ version="0.2", features=["js"] }
 rand_core      ={ version="0.6.4", features=["getrandom"] }
 tracing        ="0.1.37"
+bincode        ="1.3.3"
 
 # Used only with the `server` feature to implement the WsConnection trait
 axum             ={ version="0.6.18", features=["ws"], optional=true }
