--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -33,5 +33,12 @@ axum             ={ version="0.6.18", features=["ws"], optional=true }
 tokio-tungstenite={ version="0.19.0", optional=true }
 
 [features]
-server=["dep:axum", "dep:tokio-tungstenite", "entropy-shared/std", "subxt/substrate-compat"]
-wasm  =["entropy-shared/wasm", "subxt-signer/web"]
+default=["server"]
+server=[
+  "dep:axum",
+  "dep:tokio-tungstenite",
+  "entropy-shared/std",
+  "subxt/substrate-compat",
+  "subxt/native",
+]
+wasm=["entropy-shared/wasm", "subxt-signer/web"]
