--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -39,6 +39,7 @@ wasm-bindgen        ={ version="0.2.87", optional=true }
 wasm-bindgen-derive ={ version="0.2", optional=true }
 js-sys              ={ version="0.3.64", optional=true }
 base64              ={ version="0.13.0", optional=true }
+serde_json          ={ version="1.0", optional=true }
 
 [features]
 default=["server"]
@@ -60,6 +61,7 @@ wasm=[
   "dep:js-sys",
   "dep:base64",
   "subxt/web",
+  "dep:serde_json",
 ]
 
 [lib]
