--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -100,6 +100,7 @@ jobs:
         steps:
             - increase-swap
             - install-dependencies-and-checkout
+            - run: cargo build -p entropy-protocol --target wasm32-unknown-unknown --no-default-features -F wasm
             - run:
                 command: pushd node && cargo build --all-targets --release -j $(nproc) && cargo test --all-targets --release
                 no_output_timeout: 45m
