--- a/pallets/propagation/Cargo.toml
+++ b/pallets/propagation/Cargo.toml
@@ -12,38 +12,38 @@ publish   =false
 targets=['x86_64-unknown-linux-gnu']
 
 [dependencies]
-pallet-authorship = { default-features = false , version = "25.0.0" }
+pallet-authorship       ={ default-features=false, version="25.0.0" }
 pallet-relayer          ={ version="0.0.9", default-features=false, path="../relayer" }
 pallet-programs         ={ version="0.0.9", default-features=false, path="../programs" }
 pallet-staking-extension={ version="0.0.9", default-features=false, path="../staking" }
-frame-benchmarking = { default-features = false, optional = true , version = "25.0.0" }
-frame-support = { default-features = false , version = "25.0.0" }
-frame-system = { default-features = false , version = "25.0.0" }
+frame-benchmarking      ={ default-features=false, optional=true, version="25.0.0" }
+frame-support           ={ default-features=false, version="25.0.0" }
+frame-system            ={ default-features=false, version="25.0.0" }
 
-codec             ={ package="parity-scale-codec", version="3.6.3", default-features=false, features =["derive"] }
-scale-info        ={ version="2.1", default-features=false, features=["derive"] }
+codec     ={ package="parity-scale-codec", version="3.6.3", default-features=false, features=["derive"] }
+scale-info={ version="2.1", default-features=false, features=["derive"] }
 
 log                  ={ version="0.4.0", default-features=false }
-sp-staking    ={ version="23.0.0", default-features=false }
-sp-io = { default-features = false , version = "27.0.0" }
+sp-staking           ={ version="23.0.0", default-features=false }
+sp-io                ={ default-features=false, version="27.0.0" }
 lite-json            ={ version="0.1", default-features=false }
-sp-runtime    ={ version="28.0.0", default-features=false }
-sp-core       ={ version="25.0.0", default-features=false }
+sp-runtime           ={ version="28.0.0", default-features=false }
+sp-core              ={ version="25.0.0", default-features=false }
 entropy-shared       ={ path="../../crates/shared", default-features=false, features=["wasm-no-std"] }
-sp-application-crypto = { default-features = false , version = "27.0.0" }
+sp-application-crypto={ default-features=false, version="27.0.0" }
 
 [dev-dependencies]
 sp-keystore                    ={ version="0.31.0" }
 parking_lot                    ="0.11.2"
-pallet-staking={ version="25.0.0", default-features=false }
-pallet-timestamp = { default-features = false , version = "24.0.0" }
-frame-election-provider-support = { default-features = false , version = "25.0.0" }
-pallet-balances = { default-features = false , version = "25.0.0" }
-pallet-staking-reward-curve = { version = "10.0.0" }
-pallet-session={ version="25.0.0", default-features=false }
-pallet-babe = { default-features = false , version = "25.0.0" }
-sp-npos-elections = { default-features = false , version = "23.0.0" }
-pallet-bags-list = { default-features = false , version = "24.0.0" }
+pallet-staking                 ={ version="25.0.0", default-features=false }
+pallet-timestamp               ={ default-features=false, version="24.0.0" }
+frame-election-provider-support={ default-features=false, version="25.0.0" }
+pallet-balances                ={ default-features=false, version="25.0.0" }
+pallet-staking-reward-curve    ={ version="10.0.0" }
+pallet-session                 ={ version="25.0.0", default-features=false }
+pallet-babe                    ={ default-features=false, version="25.0.0" }
+sp-npos-elections              ={ default-features=false, version="23.0.0" }
+pallet-bags-list               ={ default-features=false, version="24.0.0" }
 
 [features]
 default=['std']
