--- a/pallets/slashing/Cargo.toml
+++ b/pallets/slashing/Cargo.toml
@@ -12,31 +12,31 @@ publish   =false
 targets=['x86_64-unknown-linux-gnu']
 
 [dependencies]
-codec             ={ package="parity-scale-codec", version="3.6.3", default-features=false, features =["derive"] }
-scale-info        ={ version="2.1", default-features=false, features=["derive"] }
+codec     ={ package="parity-scale-codec", version="3.6.3", default-features=false, features=["derive"] }
+scale-info={ version="2.1", default-features=false, features=["derive"] }
 
 log                  ={ version="0.4.0", default-features=false }
-sp-staking    ={ version="23.0.0", default-features=false }
-sp-io = { default-features = false , version = "27.0.0" }
-sp-runtime    ={ version="28.0.0", default-features=false }
-sp-application-crypto = { default-features = false , version = "27.0.0" }
-sp-std        ={ package="sp-std", version="12.0.0", default-features=false }
+sp-staking           ={ version="23.0.0", default-features=false }
+sp-io                ={ default-features=false, version="27.0.0" }
+sp-runtime           ={ version="28.0.0", default-features=false }
+sp-application-crypto={ default-features=false, version="27.0.0" }
+sp-std               ={ package="sp-std", version="12.0.0", default-features=false }
 
-frame-benchmarking = { default-features = false, optional = true , version = "25.0.0" }
-frame-support = { default-features = false , version = "25.0.0" }
-frame-system = { default-features = false , version = "25.0.0" }
+frame-benchmarking={ default-features=false, optional=true, version="25.0.0" }
+frame-support     ={ default-features=false, version="25.0.0" }
+frame-system      ={ default-features=false, version="25.0.0" }
 
 [dev-dependencies]
-pallet-session={ version="25.0.0", default-features=false }
-pallet-staking-reward-curve = { version = "10.0.0", default-features=false }
-frame-election-provider-support = { default-features = false , version = "25.0.0" }
-pallet-timestamp = { default-features = false , version = "24.0.0" }
-pallet-staking={ version="25.0.0", default-features=false }
-pallet-balances = { default-features = false , version = "25.0.0" }
-pallet-bags-list = { default-features = false , version = "24.0.0" }
-sp-npos-elections = { default-features = false , version = "23.0.0" }
+pallet-session                 ={ version="25.0.0", default-features=false }
+pallet-staking-reward-curve    ={ version="10.0.0", default-features=false }
+frame-election-provider-support={ default-features=false, version="25.0.0" }
+pallet-timestamp               ={ default-features=false, version="24.0.0" }
+pallet-staking                 ={ version="25.0.0", default-features=false }
+pallet-balances                ={ default-features=false, version="25.0.0" }
+pallet-bags-list               ={ default-features=false, version="24.0.0" }
+sp-npos-elections              ={ default-features=false, version="23.0.0" }
 
-sp-core       ={ version="25.0.0", default-features=false }
+sp-core={ version="25.0.0", default-features=false }
 
 [features]
 default=['std']
