--- a/pallets/staking/Cargo.toml
+++ b/pallets/staking/Cargo.toml
@@ -12,12 +12,12 @@ publish   =false
 targets=['x86_64-unknown-linux-gnu']
 
 [dependencies]
-codec             ={ package="parity-scale-codec", version="3.6.3", default-features=false, features =["derive"] }
-scale-info        ={ version="2.1", default-features=false, features=["derive"] }
+codec     ={ package="parity-scale-codec", version="3.6.3", default-features=false, features=["derive"] }
+scale-info={ version="2.1", default-features=false, features=["derive"] }
 
-frame-benchmarking = { default-features = false, optional = true , version = "25.0.0" }
-frame-support = { default-features = false , version = "25.0.0" }
-frame-system = { default-features = false , version = "25.0.0" }
+frame-benchmarking={ default-features=false, optional=true, version="25.0.0" }
+frame-support     ={ default-features=false, version="25.0.0" }
+frame-system      ={ default-features=false, version="25.0.0" }
 
 pallet-staking={ version="25.0.0", default-features=false }
 sp-runtime    ={ version="28.0.0", default-features=false }
@@ -31,13 +31,13 @@ serde         ={ version="1.0.147", default-features=false }
 entropy-shared={ path="../../crates/shared", default-features=false, features=["wasm-no-std"] }
 
 [dev-dependencies]
-pallet-balances = { default-features = false , version = "25.0.0" }
-pallet-timestamp = { default-features = false , version = "24.0.0" }
-frame-election-provider-support = { default-features = false , version = "25.0.0" }
-pallet-staking-reward-curve = { version = "10.0.0" }
-pallet-bags-list = { default-features = false , version = "24.0.0" }
-sp-npos-elections = { default-features = false , version = "23.0.0" }
-sp-io = { default-features = false , version = "27.0.0" }
+pallet-balances                ={ default-features=false, version="25.0.0" }
+pallet-timestamp               ={ default-features=false, version="24.0.0" }
+frame-election-provider-support={ default-features=false, version="25.0.0" }
+pallet-staking-reward-curve    ={ version="10.0.0" }
+pallet-bags-list               ={ default-features=false, version="24.0.0" }
+sp-npos-elections              ={ default-features=false, version="23.0.0" }
+sp-io                          ={ default-features=false, version="27.0.0" }
 
 [features]
 default=['std']
